--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
 {% block body_block %}
 
         <h1>Plenty Of Riffs Homepage</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
-        <img src="{% static "images/miles.jpg" %}" alt="Picture of Miles" height="60"/> <!-- New line -->
-        <a href="{% url 'add_instrument' %}">Add an instrument to your profile</a>
+
+        <img src="{% static "images/miles.jpg" %}" alt="Picture of Miles" height="60"/><br>
 {% endblock %}
