--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,19 @@
 
 <html>
     <head>
-        <title>Plenty Of Riffs</title>
+        <title>Plenty Of Riffs</title><link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+
+
     </head>
 
     <body>
-
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+        <div class="navbar-header">
         <div>
-            <ul>
+            <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'index' %}">Home</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'profile' %}">My Profile</a></li>
@@ -19,6 +25,10 @@
             {% endif %}
 
             </ul>
+            </div>
+        </div>
+        </div>
+        </div>
         </div>
         <div>{% block body_block %}{% endblock %}</div>
 
