--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
                 <li><a href="{% url 'index' %}">Home</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'profile' %}">My Profile</a></li>
+                <li><a href="{% url 'matches' %}">My Matches</a></li>
                 <li><a href="{% url 'auth_logout' %}?next=/matchmaker/">Logout</a></li>
             {% else %}
                 <li><a href="{% url 'registration_register' %}">Register</a></li>
