--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,12 @@
 body {
     padding-top: 50px;
-    padding-left: 10px;
+    /*padding-left: 10px;*/
 }
 
 .navbar-inverse {
   border-bottom: 10px;
 }
+
 
 .navbar-header {
     float: right;
