--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body_block %}
+    <div class="container">
         <h1>Plenty Of Riffs Homepage</h1>
-
+    </div>
 {% endblock %}
