--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,13 +1,38 @@
 {% extends "base.html" %}
 
-
 {% block body_block %}
-
+<div class="container">
 <h1>Register Here</h1>
+<!--
+    <form role="form">
+          <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="username" class="form-control" id="username">
+            <p>Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
+          </div>
+          <div class="form-group">
+            <label for="pwd">E-mail:</label>
+            <input type="email" class="form-control" id="email">
+          </div>
+          <div class="form-group">
+            <label for="pwd">Password:</label>
+            <input type="password" class="form-control" id="pwd">
+          </div>
+          <div class="form-group">
+            <label for="pwd">Confirm Password:</label>
+            <input type="password" class="form-control" id="pwd">
+              <p>Enter the same password as above, for verification.</p>
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+-->
+
         <form method="post" action=".">
                 {% csrf_token %}
                 {{ form.as_p }}
 
                 <input type="submit" value="Submit" />
         </form>
+
+</div>
 {% endblock %}
