--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 
 <html>
     <head>
+        <link href="../static/images/favicon.ico" rel="icon" type="image/x-icon">
         <title>Plenty Of Riffs</title>
         <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
