--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,24 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-    <div class="container">
-        <h1>Plenty Of Riffs Homepage</h1>
+    <div class="splash" xmlns="http://www.w3.org/1999/html">
+        <div class="container">
+            <div class="index-content">
+                <img src="../static/images/por_logo.png" alt="Plenty of Riffs" style="width:450px;height:auto;">
+                <p></p>
+                <p>Connecting musicians since 2015.</p>
+                <div></div>
+                <div></div>
+                <div class="index-signup">
+                    {% if user.is_authenticated %}
+                        <p>Review your matched to get in touch with</p>
+                        <p>musicians in your area today!</p>
+                    {% else %}
+                        <p>Sign up today to start collaborating for free!</p>
+                        <a href="{% url 'registration_register' %}" class="btn" role="button"><strong>Register</strong></a>
+                    {% endif %}
+            </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
