--- a/templates/matches.html
+++ b/templates/matches.html
@@ -7,7 +7,7 @@
         <h1>Your Matches</h1>
 
             {% if matches %}
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>First name</th>
