--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,41 +1,58 @@
 {% extends "base.html" %}
 
 {% block body_block %}
+    <div class="container">
         <h1>My Profile</h1>
+        <hr style="width: 100%; height: 1px;" />
         <h2>Personal Info</h2>
         {% if profile %}
-            <ul>
-            <li><strong>First Name:</strong> {{ profile.first_name }}</li>
-            <li><strong>Last Name:</strong>{{ profile.last_name }}</li>
-            <li><strong>Gender: </strong>{{  profile.gender }}</li>
-            <li><strong>Birthdate: </strong>{{  profile.birth_date }}</li>
-            <li><strong>Email:</strong>{{ profile.user.email }}</li>
-            <li><strong>Location: </strong>{{  profile.location }}</li>
-            <li><strong>Bio: </strong>{{  profile.bio }}</li>
-            </ul>
+            <div class="row">
+                <div class="col-sm-2"><strong>First Name:</strong></div>
+                <div class="col-sm-10">{{ profile.first_name }}</div>
+                <div class="col-sm-2"><strong>Last Name:</strong></div>
+                <div class="col-sm-10">{{ profile.last_name }}</div>
+                <div class="col-sm-2"><strong>Gender:</strong></div>
+                <div class="col-sm-10">{{ profile.gender }}</div>
+                <div class="col-sm-2"><strong>Birthdate:</strong></div>
+                <div class="col-sm-10">{{ profile.birth_date }}</div>
+                <div class="col-sm-2"><strong>Email:</strong></div>
+                <div class="col-sm-10">{{ profile.user.email }}</div>
+                <div class="col-sm-2"><strong>Location:</strong></div>
+                <div class="col-sm-10">{{ profile.location }}</div>
+                <div class="col-sm-2"><strong>Bio:</strong></div>
+                <div class="col-sm-10">{{ profile.bio }}</div>
+            </div>
 
         {% endif %}
-        <a href="{% url 'edit_personal_info' %}">Edit</a>
+        <p></p>
+        <a href="{% url 'edit_personal_info' %}" class="btn btn-info" role="button"><strong>Edit</strong></a>
+
         <h2>My Instruments</h2>
         {% if instruments %}
-            <ul>
+            <div class="row">
                 {% for instrument in instruments %}
-                <li><strong>{{ instrument.instrument_name }}:</strong> {{ instrument.years_of_experience }} year(s)</li>
+
+                    <div class="col-sm-2"><strong>{{ instrument.instrument_name }}:</strong></div>
+                    <div class="col-sm-10">{{ instrument.years_of_experience }} year(s)</div>
+
                 {% endfor %}
-            </ul>
+            </div>
         {% else %}
             <strong>You have not added any instruments.</strong>
         {% endif %}
-        <a href="{% url 'add_instrument' %}">Add an instrument to your profile</a>
+        <p></p>
+        <a href="{% url 'add_instrument' %}" class="btn btn-info" role="button"><strong>+</strong></a>
         <h2>My Genres</h2>
         {% if genres %}
-            <ul>
+            <div class="row">
                 {% for genre in genres %}
-                <li><strong>{{ genre.genre_name }}</li>
+                <div class="col-sm-12">{{ genre.genre_name }}</div>
                 {% endfor %}
-            </ul>
+            </div>
         {% else %}
             <strong>You have not added any genres.</strong>
         {% endif %}
-        <a href="{% url 'add_genre' %}">Add a genre to your profile</a>
+        <p></p>
+        <a href="{% url 'add_genre' %}" class="btn btn-info" role="button"><strong>+</strong></a>
+    </div>
 {% endblock %}
