Added last name to matches

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                 <div></div>
                 <div class="index-signup">
                     {% if user.is_authenticated %}
-                        <p>Review your matched to get in touch with</p>
+                        <p>Review your matches to get in touch with</p>
                         <p>musicians in your area today!</p>
                     {% else %}
                         <p>Sign up today to start collaborating for free!</p>
