--- a/templates/matches.html
+++ b/templates/matches.html
@@ -10,7 +10,8 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>First name</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
                             <th>Instrument</th>
                             <th>Genre</th>
                             <th>Location</th>
@@ -21,6 +22,7 @@
                             {% for match in matches %}
                                 <tr>
                                     <td>{{ match.first_name }}</td>
+                                    <td>{{ match.last_name }}</td>
                                     <td>
                                         {% for i in match.user.instruments.all %}
                                         {{ i.instrument_name }}
